# Modelado-Simulacion-Robots

blender/: robot.blend  robot.blend1  test.blend
blender/robot/urdf/: robot.urdf
modelado_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
modelado_ws/log/: latest_build
modelado_ws/src/robot_description/: CMakeLists.txt  package.xml
modelado_ws/src/robot_description/config/: robot_bridge.yaml  robot_controllers.yaml
modelado_ws/src/robot_description/launch/: robot_gazebo.launch.py  robot_state_publisher.launch.py
modelado_ws/src/robot_description/robots/: robot.urdf.xacro
modelado_ws/src/robot_description/urdf/arm/: gripper.urdf.xacro
modelado_ws/src/robot_description/urdf/base/: robot_base.urdf.xacro
modelado_ws/src/robot_description/urdf/sensors/: camera.urdf.xacro  imu_sensor.urdf.xacro  sensors.urdf.xacro
modelado_ws/src/robot_description/urdf/utils/: utils.urdf.xacro
modelado_ws/src/robot_description/urdf/wheels/: rover_wheel.urdf.xacro
modelado_ws/src/rover_description/: CMakeLists.txt  package.xml
modelado_ws/src/rover_description/config/: rover_bridge.yaml  rover_controllers.yaml
modelado_ws/src/rover_description/launch/: backup_gz.py  robot_controllers.launch.py  robot_gazebo.launch.py  robot_state_publisher.launch.py
modelado_ws/src/rover_description/robots/: robot.urdf.xacro
modelado_ws/src/rover_description/rviz/: robot.rviz
modelado_ws/src/rover_description/urdf/: robot.urdf  ros2_control.urdf.xacro
modelado_ws/src/rover_description/urdf/arm/: gripper.urdf.xacro  scara.urdf.xacro
modelado_ws/src/rover_description/urdf/base/: robot_base.urdf.xacro
modelado_ws/src/rover_description/urdf/sensors/: camera.urdf.xacro
modelado_ws/src/rover_description/urdf/wheels/: rover_wheel.urdf.xacro
pybullet/P1/: Fase3.csv  Fase3_bullet.py  Fase4.csv  Fase4_bullet.py  metricas_husky_f2.csv  metricas_husky_f3.1.csv  metricas_husky_f3.1_NOtorque.csv  metricas_husky_f3.1_combined.csv  metricas_husky_f3.1_friction.csv  metricas_husky_f3.1_prueba4.csv  metricas_husky_f3.1_torque.csv  metricas_husky_f3_3.csv  metricas_husky_f4.csv  p1.py  plot_results.py  video.txt
pybullet/P2/: Fase3_guillermo_alcocer.csv  Fase3_guillermo_alcocer.py  medidas.blend  plot_results.py  robot.blend  robot.blend1  test.py
pybullet/ejercicios/: ejercicio1.py  ejercicio2.py
(+128 files in other folders)
